@@ -1,5 +1,0 @@
-"""Custom exceptions."""
-
-
-class EmptyGitRepository(Exception):
-    """Empty repository exception."""
